--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #212529;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
