--- a/src/components/ItemDetail/style.css
+++ b/src/components/ItemDetail/style.css
@@ -1,6 +1,9 @@
 #CardDetail{
     background-color: #ccc;
     margin-top: 10%;
+    margin-bottom: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     
 }
 
